third_party/WebKit/Source/core/layout/LayoutBlockFlow.h
@@ -477,8 +477,7 @@ class CORE_EXPORT LayoutBlockFlow : public LayoutBlock {
 
  private:
   void resetLayout();
-  bool layoutBlockFlow(bool relayoutChildren,
-                       SubtreeLayoutScope&);
+  void layoutBlockFlow(bool relayoutChildren, SubtreeLayoutScope&);
   void addOverhangingFloatsFromChildren(LayoutUnit unconstrainedHeight);
   void layoutBlockChildren(bool relayoutChildren,
                            SubtreeLayoutScope&,
